--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,8 @@
 ---
 kind: pipeline
-name: default
+name: alpine
 steps:
-  - name: alpine
+  - name: build
     image: plugins/docker
     settings:
       username:
@@ -17,9 +17,9 @@ steps:
         - slim
 ---
 kind: pipeline
-name: default
+name: ubuntu
 steps:
-  - name: ubuntu
+  - name: build
     image: plugins/docker
     settings:
       username:
